--- a/index.html
+++ b/index.html
@@ -7,30 +7,210 @@
     <title>todo project</title>
 </head>
 <body>
-1. 프로젝트 개요
-- 프로젝트 주제 및 선정 배경
-- 개발 및 수행 목표
+<div>
 
-2. 팀 소개
-- 사진
-- 이름
-- 이메일
-- 역할
-- 깃허브(또는 개인사이트)
+    <h1>
+        1. 프로젝트 개요
+    </h1>
+    <h4>
+        - 프로젝트 주제 및 선정 배경
+    </h4>
+    <p>
+        1. To Do list는 많은 사람들이 일상생활에서 사용하는 도구 중 하나이므로 개발을 했을 때 많은 사용자들이 실제로 이용할 가능성이 높습니다.
+        <br>
+        2. 단순한 것처럼 보이지만, 사용자 인터페이스, 데이터베이스 관리, 로그인 및 인증, 실시간 알림 등 다양한 기술적인 요소를 포함할 수 있습니다.
+        <br>
+        3. 다양한 기술을 연습하고 익힐 수 있는 기회를 제공합니다.
+        <br>
+        4. Microsoft To Do 앱을 모티브로 사용하면서 불편했던 점이나 추가되었으면 하는 기능을 더한 앱을 만들어 보고 싶다는 이유가 있습니다.
+        <br>
+        5. 실사용이 가능한 웹 애플리케이션을 직접 개발해 보면서 기획부터 디자인, 제작(개발), 배포 하기까지의 일련의 과정들을 경험해 볼 수 있습니다.
+        <br>
+        6. 자신의 기술적인 역량을 향상시킬 수 있다는 점이 있습니다.
+    </p>
 
-3. 사용 기술
-- 개발에 사용한 기술
-- 개발에 소요된 물품 및 준비물
+    <h4>
+        - 개발 및 수행 목표
+    </h4>
 
-4. 프로젝트 진행 과정(월별 진행상황)
+    <strong>
+        주기능
+    </strong>
 
-5. 프로젝트 상세 소개
-- 레이아웃 세부 설명
-- 데이터베이스 / 데이터플로우 / 시스템 구조
-- 사용자 수행에 따른 세부 동작 과정
+    <p>
+        - 작업 목록 공유 기능
+        <br>
+        - 작업 목록 관리 기능 (작업 목록 삭제, 추가, 작업 목록 이름 변경)
+        <br>
+        - To do list의 기본적인 기능 (작업 삭제, 등록, 수정, 기한 설정 )
+        <br>
+        - 작업 반복 기능 (자동으로 작업을 설정한 시간 기준으로 자동으로 작업 목록에 추가)
+        <br>
+        - 캘린더 기능 (완료한 작업과 완료하지 못한 작업 등 지금까지 한 작업들이 언제 완료 되었고 언제 까지 완료해야 하는 지를 캘린더에 표시하고 한 눈에 확인 할 수 있음) *추가되었으면 하는 기능*
+    </p>
 
-6. 프로젝트 추진 결과
-- 수행 과정 및 결과 분석
-- 유지 보수 계획
+
+    <strong>
+        부수기능
+    </strong>
+    <p>
+        - 작업 세분화 기능
+        <br>
+        - #해시태그 검색 기능
+        <br>
+        - 테마 변경 기능
+    </p>
+
+    <strong>
+        페이지 구성 계획
+    </strong>
+
+    <p>
+        1. 로그인&로그아웃 페이지
+        <br>
+        2. 회원가입 페이지
+        <br>
+        3. 작업 목록 관리 & 작업 목록 페이지
+        <br>
+        4. 목록에 작업 등록 페이지
+        <br>
+        5. 검색 페이지
+        <br>
+        6. 캘린더 페이지
+        <br>
+        7. 작업 공유 페이지
+    </p>
+</div>
+
+<h1>
+    2. 팀 소개
+</h1>
+
+<div>
+    <div>
+        <strong>
+            권시경
+        </strong>
+        <br>
+        역할 : 개발 (react, firebase)
+        <br>
+        github repository : (<a href="https://github.com/kwonsigyeong">github</a>)
+        <br>
+        gmail (kwonsigyeong0803@gmail.com)
+    </div>
+    <div>
+        <strong>
+            최민혁
+        </strong>
+        <br>
+        역할 : ui&ux 디자인 (<a
+            href="https://xd.adobe.com/view/37c42479-8b54-4863-9cfb-40527771e48a-6297/?fullscreen&hints=off">xd 디자인
+        프로토타입 링크</a>)
+        <br>
+        gmail (lover5512040511@gmail.com)
+    </div>
+</div>
+
+<h1>
+    3. 사용 기술
+</h1>
+
+<strong>
+    - 개발에 사용한 기술
+</strong>
+<p>React, firebase(hosting, firestore(db), authentication), xd</p>
+<strong>
+    - 개발에 소요된 물품 및 준비물 (없음)
+</strong>
+
+<div>
+    <h1>
+        4. 프로젝트 진행 과정(월별 진행상황)
+    </h1>
+    <span><strong>3월 ~31 UX&UI 설계 및 보고서 작성</strong></span>
+    <br>
+    <span><strong>4월 ~ 5월 기능 구현 및 개발</strong></span>
+    <br>
+    <span>6월 테스트 및 오류 수정</span>
+
+</div>
+
+<div>
+    <h1>
+        5. 프로젝트 상세 소개
+    </h1>
+    <strong>
+        - 레이아웃
+    </strong>
+    <br>
+
+    <label>login</label>
+    <div>
+        <img src="./img/login.png" width="1000">
+    </div>
+    <label>main</label>
+    <div>
+        <img src="./img/main.png" width="1000">
+    </div>
+    <label>사용자 추가작업리스트 페이지</label>
+    <div>
+        <img src="./img/userTaskList.png" width="1000">
+    </div>
+    <label>작업 수정 페이지</label>
+    <div>
+        <img src="./img/taskEditor.png" width="1000">
+    </div>
+    <label>오늘 해야할작업 리스트 페이지</label>
+    <div>
+        <img src="./img/dailyList.png" width="1000">
+    </div>
+
+    <div>
+        <br>
+        <strong>
+            - 데이터베이스 / 데이터플로우 / 시스템 구조
+        </strong>
+        <br>
+        <label>전체 db 구조</label>
+        <div>
+            <img src="./img/db구조.png" width="1000">
+        </div>
+        <label>작업리스트 db</label>
+        <div>
+            <img src="./img/작업리스트.png" width="1000">
+        </div>
+        <label>작업 db 구조</label>
+        <div>
+            <img src="./img/작업db.png" width="1000">
+        </div>
+    </div>
+</div>
+
+<div>
+    <h1>
+        6. 프로젝트 추진 결과
+    </h1>
+
+    <div>
+        <h4>
+            - 수행 과정 및 결과 분석
+        </h4>
+        <p>
+            react 와 firebase 를 처음 사용해서 프로젝트를 진행했기 때문에 어려움도 많았지만 처음 계획한 기능을 최대한 많이 구현하려 노력했다.
+        </p>
+    </div>
+
+    <div>
+        <h4>
+            - 유지 보수 계획
+        </h4>
+        <p>
+            오류수정과 구현이 안된 기능을 추가 개발한다.
+            (캘린더 기능,작업 공유, 검색, 작업 반복)
+        </p>
+    </div>
+
+</div>
+
 </body>
 </html>
